--- a/README.org
+++ b/README.org
@@ -10,6 +10,8 @@ This repository hosts [[https://srfi.schemers.org/srfi-139/][SRFI 139]]: Syntax 
 
 This SRFI is in /final/ status.
 
+See also [[https://srfi.schemers.org/srfi-211/][SRFI 211: Scheme Macro Libraries]].
+
 The full documentation for this SRFI can be found in the [[https://srfi.schemers.org/srfi-139/srfi-139.html][SRFI Document]].
 
 If you'd like to participate in the discussion of this SRFI, or report issues with it, please [[https://srfi.schemers.org/srfi-139/][join the SRFI-139 mailing list]] and send your message there.
